--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - run: git fetch --unshallow
+    - run: git fetch --unshallow -q
     - run: git log v1..HEAD --pretty='format:%s'
     - name: Set up JDK 14
       uses: actions/setup-java@v1
