--- a/build.gradle
+++ b/build.gradle
@@ -84,17 +84,11 @@ dependencies {
     }
     implementation("org.postgresql:postgresql:42.2.14")
 
+    testImplementation("org.junit.jupiter:junit-jupiter:5.6.2")
+    testImplementation("com.tngtech.archunit:archunit-junit5:0.14.1")
     testImplementation("org.assertj:assertj-core:3.16.1")
     testImplementation("io.rest-assured:rest-assured:4.3.1")
-
-    testImplementation("org.junit.jupiter:junit-jupiter:5.6.2")
-
     testImplementation("com.h2database:h2:1.4.200")
-
-    testImplementation("com.tngtech.archunit:archunit-junit5-api:0.14.1")
-    testRuntimeOnly("com.tngtech.archunit:archunit-junit5-engine:0.14.1") {
-        exclude(group: "org.junit.platform", module: "junit-platform-engine")
-    }
 
     integrationTestImplementation("org.testcontainers:mysql:1.14.3") {
         exclude(group: "org.slf4j", module: "slf4j-api")
@@ -104,7 +98,6 @@ dependencies {
     }
 
     e2eTestImplementation("org.junit.jupiter:junit-jupiter:5.6.2")
-
     e2eTestImplementation("org.assertj:assertj-core:3.16.1")
     e2eTestImplementation("org.testcontainers:testcontainers:1.14.3") {
         exclude(group: "org.slf4j", module: "slf4j-api")
