--- a/account-service/src/e2eTest/resources/e2e-test.yml
+++ b/account-service/src/e2eTest/resources/e2e-test.yml
@@ -4,7 +4,7 @@ version: '2.4'
 services:
 
   lb:
-    build: ../../../infrastructure/envoy
+    build: ../../../../infrastructure/envoy
     depends_on:
       - account
     ports:
