Use new Java toolchains feature

--- a/buildSrc/src/main/groovy/account.java-conventions.gradle
+++ b/buildSrc/src/main/groovy/account.java-conventions.gradle
@@ -4,8 +4,9 @@ plugins {
 }
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_14
-    targetCompatibility = JavaVersion.VERSION_14
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(14)
+    }
 }
 
 repositories {
@@ -13,7 +14,7 @@ repositories {
 }
 
 tasks.withType(JavaCompile).configureEach {
-    options.compilerArgs += "--enable-preview"
+    options.compilerArgs += ["--enable-preview", "--release", "14"]
 }
 
 tasks.withType(Test).configureEach {
