Fix deprecations, suppress known unchecked warnings

--- a/buildSrc/src/main/groovy/account.java-conventions.gradle
+++ b/buildSrc/src/main/groovy/account.java-conventions.gradle
@@ -14,7 +14,7 @@ repositories {
 }
 
 tasks.withType(JavaCompile).configureEach {
-    options.compilerArgs += ["--enable-preview", "--release", "14"]
+    options.compilerArgs += ["--enable-preview", "--release", "14", "-Xlint:deprecation", "-Xlint:unchecked"]
 }
 
 tasks.withType(Test).configureEach {
