--- a/docker-compose-mysql.yml
+++ b/docker-compose-mysql.yml
@@ -17,9 +17,9 @@ services:
     ports:
       - 8080
     environment:
-      MYSQL_USER: test
-      MYSQL_PASSWORD: test
-      MYSQL_JDBC_URL: jdbc:mysql://database:3306/event_store
+      JDBC_URL: jdbc:mysql://database:3306/event_store
+      DB_USER: test
+      DB_PASSWORD: test
       ZIPKIN_URL: http://zipkin:9411/api/v2/spans
     mem_limit: 128M
     scale: 2
