--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,9 +17,9 @@ services:
     ports:
       - 8080
     environment:
-      POSTGRES_USER: test
-      POSTGRES_PASSWORD: test
-      POSTGRES_JDBC_URL: jdbc:postgresql://database:5432/event_store
+      JDBC_URL: jdbc:postgresql://database:5432/event_store
+      DB_USER: test
+      DB_PASSWORD: test
       ZIPKIN_URL: http://zipkin:9411/api/v2/spans
     mem_limit: 128M
     scale: 2
