--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,10 +14,10 @@ jobs:
     - name: Build
       run: ./gradlew build --parallel --stacktrace
     - name: Upload code coverage report to codeclimate
-      uses: paambaati/codeclimate-action@v2.5.6
+      uses: paambaati/codeclimate-action@v2.6.0
       env:
         CC_TEST_REPORTER_ID: ${{secrets.CC_TEST_REPORTER_ID}}
-        JACOCO_SOURCE_PATH: src/main/java
+        JACOCO_SOURCE_PATH: "${{github.workspace}}/**/src/main/java"
       with:
         coverageCommand: ./gradlew jacocoTestReport
         coverageLocations: "${{github.workspace}}/account-service/build/reports/jacoco/test/jacocoTestReport.xml:jacoco"
