--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
       uses: paambaati/codeclimate-action@v2.6.0
       env:
         CC_TEST_REPORTER_ID: ${{secrets.CC_TEST_REPORTER_ID}}
-        JACOCO_SOURCE_PATH: "${{github.workspace}}/**/src/main/java"
+        JACOCO_SOURCE_PATH: "${{github.workspace}}/account-service/src/main/java"
       with:
         coverageCommand: ./gradlew jacocoTestReport
         coverageLocations: "${{github.workspace}}/account-service/build/reports/jacoco/test/jacocoTestReport.xml:jacoco"
