--- a/gradle/build-logic/src/main/groovy/account.java-conventions.gradle
+++ b/gradle/build-logic/src/main/groovy/account.java-conventions.gradle
@@ -5,7 +5,7 @@ plugins {
 
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(14)
+        languageVersion = JavaLanguageVersion.of(15)
     }
 }
 
@@ -14,7 +14,7 @@ repositories {
 }
 
 tasks.withType(JavaCompile).configureEach {
-    options.compilerArgs += ["--enable-preview", "--release", "14", "-Xlint:deprecation", "-Xlint:unchecked"]
+    options.compilerArgs += ["--enable-preview", "--release", "15", "-Xlint:deprecation", "-Xlint:unchecked"]
 }
 
 tasks.withType(Test).configureEach {
@@ -33,6 +33,10 @@ configurations {
             failOnVersionConflict()
         }
     }
+}
+
+jacoco {
+    toolVersion = "0.8.6"
 }
 
 jacocoTestReport {
