--- a/account-service/build.gradle
+++ b/account-service/build.gradle
@@ -25,9 +25,10 @@ dependencies {
     }
     implementation("org.postgresql:postgresql:42.2.16")
 
-    testImplementation("org.junit.jupiter:junit-jupiter:5.6.2")
+    testFixturesApi("org.junit.jupiter:junit-jupiter:5.6.2")
+    testFixturesApi("org.assertj:assertj-core:3.17.2")
+
     testImplementation("com.tngtech.archunit:archunit-junit5:0.14.1")
-    testImplementation("org.assertj:assertj-core:3.17.2")
     testImplementation("io.rest-assured:rest-assured:4.3.1")
     testImplementation("com.h2database:h2:1.4.200")
 
