--- a/settings.gradle
+++ b/settings.gradle
@@ -2,3 +2,5 @@ rootProject.name = "account"
 includeBuild("gradle/build-logic")
 include("account-service")
 include("eventstore")
+include("eventstore-postgres")
+include("eventstore-mysql")
