Try aggregating code coverage report for multi-project build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,10 +17,10 @@ jobs:
       uses: paambaati/codeclimate-action@v2.6.0
       env:
         CC_TEST_REPORTER_ID: ${{secrets.CC_TEST_REPORTER_ID}}
-        JACOCO_SOURCE_PATH: "${{github.workspace}}/account-service/src/main/java"
+        #JACOCO_SOURCE_PATH: "${{github.workspace}}/account-service/src/main/java"
       with:
-        coverageCommand: ./gradlew jacocoTestReport
-        coverageLocations: "${{github.workspace}}/account-service/build/reports/jacoco/test/jacocoTestReport.xml:jacoco"
+        coverageCommand: ./gradlew codeCoverageReport
+        coverageLocations: "${{github.workspace}}/code-coverage-report/build/reports/jacoco/test/jacocoTestReport.xml:jacoco"
     - name: Prepare Release
       id: release_config
       if: ${{ github.ref == 'refs/heads/master' }}
