--- a/settings.gradle
+++ b/settings.gradle
@@ -4,3 +4,4 @@ include("account-service")
 include("eventstore")
 include("eventstore-postgres")
 include("eventstore-mysql")
+include("code-coverage-report")
