--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,14 +13,8 @@ jobs:
         java-version: 15
     - name: Build
       run: ./gradlew build --parallel --stacktrace
-    - name: Upload code coverage report to codeclimate
-      uses: paambaati/codeclimate-action@v2.6.0
-      env:
-        CC_TEST_REPORTER_ID: ${{secrets.CC_TEST_REPORTER_ID}}
-        JACOCO_SOURCE_PATH: "${{github.workspace}}/"
-      with:
-        coverageCommand: ./gradlew codeCoverageReport
-        coverageLocations: "${{github.workspace}}/code-coverage-report/build/reports/jacoco/codeCoverageReport/codeCoverageReport.xml:jacoco"
+    - name: Upload code coverage report to coveralls
+      run: ./gradlew codeCoverageReport coveralls
     - name: Prepare Release
       id: release_config
       if: ${{ github.ref == 'refs/heads/master' }}
