--- a/gradle/build-logic/build.gradle
+++ b/gradle/build-logic/build.gradle
@@ -1,3 +1,11 @@
 plugins {
     id("groovy-gradle-plugin")
 }
+
+repositories {
+    gradlePluginPortal()
+}
+
+dependencies {
+    implementation("gradle.plugin.org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.10.2")
+}
