--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,8 @@ jobs:
     - name: Build
       run: ./gradlew build --parallel --stacktrace
     - name: Upload code coverage report to coveralls
+      env:
+        COVERALLS_REPO_TOKEN: ${{secrets.COVERALLS_REPO_TOKEN}}
       run: ./gradlew codeCoverageReport coveralls
     - name: Prepare Release
       id: release_config
