Fix code coverage reports

--- a/code-coverage-report/build.gradle
+++ b/code-coverage-report/build.gradle
@@ -4,4 +4,6 @@ plugins {
 
 dependencies {
     implementation(project(":account-service"))
+    implementation(project(":eventstore"))
+    implementation(project(":eventstore-postgres"))
 }
