--- a/gradle/build-logic/src/main/groovy/account.jacoco-aggregation.gradle
+++ b/gradle/build-logic/src/main/groovy/account.jacoco-aggregation.gradle
@@ -48,5 +48,14 @@ tasks.named("check") {
 }
 
 coveralls {
-    jacocoReportPath("build/reports/jacoco/codeCoverageReport/codeCoverageReport.xml")
+    jacocoReportPath = "build/reports/jacoco/codeCoverageReport/codeCoverageReport.xml"
+}
+
+tasks.named("coveralls") {
+    doFirst {
+        println(configurations.sourcesPath.flatten())
+        coveralls {
+            sourceDirs = configurations.sourcesPath.flatten()
+        }
+    }
 }
