--- a/eventstore-mysql/build.gradle
+++ b/eventstore-mysql/build.gradle
@@ -5,15 +5,16 @@ plugins {
 dependencies {
     api(project(":eventstore"))
 
-    implementation("mysql:mysql-connector-java:8.0.21") {
+    implementation(platform(project(":platform")))
+    implementation("mysql:mysql-connector-java") {
         exclude(group: "com.google.protobuf", module: "protobuf-java")
     }
 
     testImplementation(testFixtures(project(":eventstore")))
-    testImplementation("com.h2database:h2:1.4.200")
+    testImplementation("com.h2database:h2")
 
     integrationTestImplementation(testFixtures(project(":eventstore")))
-    integrationTestImplementation("org.testcontainers:mysql:1.14.3") {
+    integrationTestImplementation("org.testcontainers:mysql") {
         exclude(group: "org.slf4j", module: "slf4j-api")
     }
 }
