--- a/eventstore/build.gradle
+++ b/eventstore/build.gradle
@@ -3,8 +3,9 @@ plugins {
 }
 
 dependencies {
-    implementation("org.slf4j:slf4j-api:1.7.25")
-    implementation("org.flywaydb:flyway-core:6.5.6")
+    implementation(platform(project(":platform")))
+    implementation("org.slf4j:slf4j-api")
+    implementation("org.flywaydb:flyway-core")
 
     testFixturesApi(testFixtures(project(":account-service")))
 }
