--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,6 @@
 rootProject.name = "account"
 includeBuild("gradle/build-logic")
+include("platform")
 include("account-service")
 include("eventstore")
 include("eventstore-postgres")
