--- a/eventstore-mysql/build.gradle
+++ b/eventstore-mysql/build.gradle
@@ -14,7 +14,5 @@ dependencies {
     testImplementation("com.h2database:h2")
 
     integrationTestImplementation(testFixtures(project(":eventstore")))
-    integrationTestImplementation("org.testcontainers:mysql") {
-        exclude(group: "org.slf4j", module: "slf4j-api")
-    }
+    integrationTestImplementation("org.testcontainers:mysql")
 }
