Fix inputs for composeUp task

--- a/account-service/build.gradle
+++ b/account-service/build.gradle
@@ -68,10 +68,10 @@ tasks.register("asyncStressTest", JavaExec) {
 
 tasks.register("composeUp", Exec) {
     it.dependsOn("build")
-    it.inputs.files(file("${rootProject.projectDir}/docker-compose.yml")).withPathSensitivity(PathSensitivity.RELATIVE)
+    def composeFile = eventstoreImpl.get() == "mysql" ? "docker-compose-mysql.yml" : "docker-compose.yml"
+    it.inputs.files(file("${rootProject.projectDir}/$composeFile")).withPathSensitivity(PathSensitivity.RELATIVE)
     it.workingDir(rootProject.projectDir)
     it.executable("docker-compose")
-    def composeFile = eventstoreImpl.get() == "mysql" ? "docker-compose-mysql.yml" : "docker-compose.yml"
     it.args("-f", "$composeFile", "up", "--build", "-d")
     it.doLast {
         println("\n\n")
