--- a/code-coverage-report/build.gradle
+++ b/code-coverage-report/build.gradle
@@ -5,4 +5,6 @@ plugins {
 dependencies {
     implementation(project(":account-service"))
     implementation(project(":eventstore"))
+    implementation(project(":eventstore-postgres"))
+    implementation(project(":eventstore-mysql"))
 }
