--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,9 @@
+dependencyResolutionManagement {
+    repositories {
+        mavenCentral()
+    }
+}
+
 rootProject.name = "account"
 includeBuild("gradle/build-logic")
 include("platform")
