--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,14 +12,14 @@ jobs:
       with:
         java-version: 15
     - name: Build
-      run: ./gradlew build --parallel --stacktrace
+      run: ./gradlew build --stacktrace
     - name: Upload code coverage report to coveralls
       env:
         COVERALLS_REPO_TOKEN: ${{secrets.COVERALLS_REPO_TOKEN}}
-      run: ./gradlew codeCoverageReport coveralls
+      run: ./gradlew --no-configuration-cache codeCoverageReport coveralls
     - name: Prepare Release
       id: release_config
-      if: ${{ github.ref == 'refs/heads/master' }}
+      if: ${{ github.ref == 'refs/heads/maste--no-configuration-cache r' }}
       run: |
         git fetch --unshallow
         echo "::set-output name=version::$(infrastructure/next-version.sh)"
