--- a/account-service/Dockerfile
+++ b/account-service/Dockerfile
@@ -1,8 +1,8 @@
-FROM openjdk:15-jdk-slim
+FROM openjdk:16-jdk-slim
 
 EXPOSE 8080
 
-ENV JAVA_OPTS --illegal-access=deny -Xmx64m -Xms64m --enable-preview
+ENV JAVA_OPTS -Xmx64m -Xms64m
 
 ENTRYPOINT /opt/service/account-service/bin/account-service
 
