--- a/account-service/build.gradle
+++ b/account-service/build.gradle
@@ -1,13 +1,12 @@
 plugins {
     id("account.service-conventions")
-    id("java-test-fixtures")
 }
 
 def eventstoreImpl = providers.gradleProperty("eventstore").forUseAtConfigurationTime().orElse("postgres")
 
 dependencies {
     implementation(platform(project(":platform")))
-    implementation(project(":eventstore-${eventstoreImpl.get()}"))
+    implementation(project(":eventstore"))
 
     implementation("com.sparkjava:spark-core") {
         exclude(group: "org.eclipse.jetty.websocket", module: "websocket-server")
@@ -24,6 +23,12 @@ dependencies {
     implementation("io.zipkin.reporter2:zipkin-sender-urlconnection")
 
     implementation("com.zaxxer:HikariCP")
+
+    runtimeOnly(project(":eventstore")) {
+        capabilities {
+            requireCapability("lt.rieske.account:eventstore-${eventstoreImpl.get()}")
+        }
+    }
 
     testFixturesApi(platform(project(":platform")))
     testFixturesApi("org.junit.jupiter:junit-jupiter")
@@ -47,7 +52,8 @@ application {
 }
 
 tasks.named("e2eTest") {
-    it.dependsOn(":eventstore-postgres:integrationTest")
+    it.dependsOn(":eventstore:mysqlIntegrationTest")
+    it.dependsOn(":eventstore:postgresIntegrationTest")
     it.systemProperty("eventstore", eventstoreImpl.get())
     it.inputs.files(jar.archiveFile, file("Dockerfile"), fileTree("../infrastructure"))
             .withPathSensitivity(PathSensitivity.RELATIVE)
