--- a/gradle/build-logic/src/main/groovy/account.java-conventions.gradle
+++ b/gradle/build-logic/src/main/groovy/account.java-conventions.gradle
@@ -4,26 +4,6 @@ plugins {
     id("java-test-fixtures")
 }
 
-sourceSets {
-    integrationTest {
-        compileClasspath += sourceSets.testFixtures.output
-        runtimeClasspath += sourceSets.testFixtures.output
-    }
-}
-
-configurations {
-    integrationTestImplementation.extendsFrom(implementation, testFixturesImplementation)
-}
-
-def integrationTest = tasks.register("integrationTest", Test) {
-    it.shouldRunAfter("test")
-
-    it.testClassesDirs = sourceSets.integrationTest.output.classesDirs
-    it.classpath = sourceSets.integrationTest.runtimeClasspath
-}
-
-tasks.named("check") { it.dependsOn(integrationTest) }
-
 // Do not generate reports for individual projects
 tasks.named("jacocoTestReport") {
     enabled = false
@@ -40,8 +20,12 @@ configurations {
             attribute(Category.CATEGORY_ATTRIBUTE, objects.named(Category, Category.DOCUMENTATION))
             attribute(DocsType.DOCS_TYPE_ATTRIBUTE, objects.named(DocsType, "source-folders"))
         }
-        sourceSets.main.java.srcDirs.forEach {
-            outgoing.artifact(it)
+        afterEvaluate {
+            sourceSets.forEach {
+                it.java.srcDirs.forEach {
+                    outgoing.artifact(it)
+                }
+            }
         }
     }
 
@@ -55,12 +39,10 @@ configurations {
             attribute(Category.CATEGORY_ATTRIBUTE, objects.named(Category, Category.DOCUMENTATION))
             attribute(DocsType.DOCS_TYPE_ATTRIBUTE, objects.named(DocsType, "jacoco-coverage-data"))
         }
-        // This will cause the test task to run if the coverage data is requested by the aggregation task
-        outgoing.artifact(tasks.named("test").map { task ->
-            task.extensions.getByType(JacocoTaskExtension).destinationFile
-        })
-        outgoing.artifact(tasks.named("integrationTest").map { task ->
-            task.extensions.getByType(JacocoTaskExtension).destinationFile
-        })
+        afterEvaluate {
+            tasks.withType(Test).forEach {
+                outgoing.artifact(it.extensions.getByType(JacocoTaskExtension).destinationFile)
+            }
+        }
     }
 }
