--- a/account-service/build.gradle
+++ b/account-service/build.gradle
@@ -46,7 +46,7 @@ application {
 }
 
 tasks.named("e2eTest") {
-    it.dependsOn(":eventstore-postgres:integrationTest")
+    it.dependsOn(":eventstore-${eventstoreImpl.get()}:integrationTest")
     it.systemProperty("eventstore", eventstoreImpl.get())
     it.inputs.files(jar.archiveFile, file("Dockerfile"), fileTree("../infrastructure"))
             .withPathSensitivity(PathSensitivity.RELATIVE)
